WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
313388
WebGL: Some texImage functions use incorrect name when reporting errors
https://bugs.webkit.org/show_bug.cgi?id=313388
Summary
WebGL: Some texImage functions use incorrect name when reporting errors
Kimmo Kinnunen
Reported
2026-04-26 22:57:48 PDT
WebGL: Some texImage functions use incorrect name when reporting errors
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-04-26 22:57:55 PDT
<
rdar://problem/175652807
>
Kimmo Kinnunen
Comment 2
2026-04-26 23:15:30 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/63664
Ryan Haddad
Comment 3
2026-04-28 16:26:50 PDT
Landed
https://commits.webkit.org/312156@main
(c2419dc8c9a6)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug