WebGL: Some texImage functions use incorrect name when reporting errors https://bugs.webkit.org/show_bug.cgi?id=313388 rdar://175652807

Reviewed by Dan Glastonbury.

Fix copy paste issues in few cases of texImage validation error
reporting.

* Source/WebCore/html/canvas/WebGL2RenderingContext.cpp:
(WebCore::WebGL2RenderingContext::texSubImage2D):
* Source/WebCore/html/canvas/WebGLRenderingContextBase.cpp:
(WebCore::WebGLRenderingContextBase::texImageSource):

Canonical link: https://commits.webkit.org/312156@main